--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,16 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${file}"
+            "name": "Debug Backend",
+            "preLaunchTask": "build-backend",
+            "program": "${workspaceFolder}/backend/src/index.ts",
+            "cwd": "${workspaceFolder}/backend",
+            "protocol": "inspector",
+            "outFiles": [
+              "${workspaceFolder}/backend/build/**/*.js",
+              "${workspaceFolder}/backend/build/*.js",
+              "${workspaceFolder}/build/*.js"
+            ]
         },
         {
             "type": "chrome",
